--- a/css/age-css.css
+++ b/css/age-css.css
@@ -1,11 +1,17 @@
 body{
     background: url(../img/light_background.jpg);
 }
+
+
 .container-1{
-    border: 1px solid black;
     text-align: center ;
     padding: 2rem ;
-    margin: 3rem 20%;
+    margin: 3rem ;
+    justify-items: center;
+    justify-content: center;
+    background: url(img/light_background.jpg); 
+    display: flex;
+    flex-wrap: wrap;
 }
 .flex-box-container-1{
     border: 1px solid black;
@@ -16,11 +22,29 @@ body{
     margin: 1rem;
     padding: 1rem;
 }
+.result{
+    display: flex;
+    flex-wrap: wrap;
+}
 footer{
     text-align: center;
     font-size: large;
     font-weight: 600;
+    background-color: silver;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
