--- a/css/age-css.css
+++ b/css/age-css.css
@@ -6,16 +6,15 @@ body{
 .container-1{
     text-align: center ;
     padding: 2rem ;
-    margin: 3rem ;
-    justify-items: center;
-    justify-content: center;
+    margin: 3rem auto;
     background: url(img/light_background.jpg); 
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    justify-items: center;
 }
 .flex-box-container-1{
-    border: 1px solid black;
-    padding: 1rem;
+    padding: 1rem;display: grid;
 }
 .flex-box-container-1 div{
     border: 1px solid black;
@@ -31,27 +30,4 @@ footer{
     font-size: large;
     font-weight: 600;
     background-color: silver;
-    margin-bottom: 0;
-    padding-bottom: 0;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
